@@ -1,3 +1,11 @@
+2011-07-20  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_dev/src/TestFrameGrabber.cpp: simplify testing
+	the IPreciselyTimed interface by making the timestamps of
+	test frames be "coincidentally" NNN.NNN42 - if these timestamps
+	ever get replaced by network transmission timestamps, this
+	should now be obvious.
+
 2011-07-19  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/yarpserver/src/ConnectThread.h: fix persistent connections
